# tend-attend

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tend-attend.code-workspace
.github/: dependabot.yml
.github/workflows/: cd-qrcode.yml  ci-backend.yml  ci-frontend.yml  ci-qrcode.yml  dependabot-auto-merge.yml  release-pr.yml
backend/: CLAUDE.md  alembic.ini  app.env  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1dcdc4592a9e_initialize_models.py  2432e8200134_remove_refresh_token_from_user_accounts.py  27312971d87f_add_google_calendar_event_mapping_table.py  306828e98a27_initialize_models.py  38e14d592127_add_timezone_field_to_recurrence_table.py  51eeefefc423_rename_event_start_end_columns_to_.py  6424cf329e2d_initialize_models.py  8b437fd296a3_add_event_goal_and_review_tables.py  c5beee9cc314_make_recurrence_rule_wkst_nullable_for_.py  ccd8d535c4a2_add_google_calendar_integration_table.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: account.py  admin.py  auth.py  event.py  google_calendar.py  utils.py  verify.py
backend/app/core/aws/: aurora.py
backend/app/core/constants/: constants.py  secrets.py
backend/app/core/cryptography/: google_tokens.py  hash.py  jwt.py
backend/app/core/domain/entities/: account.py  base.py  event.py  google_calendar.py  verify.py
backend/app/core/domain/repositories/: base.py  google_calendar.py
backend/app/core/domain/usecase/: base.py
backend/app/core/dtos/: account.py  admin.py  auth.py  event.py  google_calendar.py  verify.py
backend/app/core/dtos/admin_dto/: migration.py
backend/app/core/dtos/ml_dto/: account.py  event.py  forecast.py
backend/app/core/error/: error_code.py
backend/app/core/features/: account.py  event.py  google_calendar.py
backend/app/core/infrastructure/db/: settings.py  sharding.py  transaction.py
backend/app/core/infrastructure/google/: calendar_service.py  oauth_flow.py
backend/app/core/infrastructure/sqlalchemy/: db.py  migrate_db.py  unit_of_work.py
backend/app/core/infrastructure/sqlalchemy/models/: base.py
backend/app/core/infrastructure/sqlalchemy/models/commons/: __init__.py  account.py  base.py  verify.py
backend/app/core/infrastructure/sqlalchemy/models/sequences/: base.py  sequence.py
backend/app/core/infrastructure/sqlalchemy/models/shards/: __init__.py  base.py  event.py  google_calendar.py
backend/app/core/infrastructure/sqlalchemy/repositories/: account.py  base.py  event.py  google_calendar.py  verify.py
backend/app/core/usecase/: account.py  auth.py  develop.py  event.py  google_calendar.py  verify.py
backend/app/core/utils/: alembic.py  datetime.py  icalendar.py  rfc5545.py  smtp.py  uuid.py
docker/backend/: .dockerignore  Dockerfile
docker/qrcode/: .dockerignore  Dockerfile
frontend/: CLAUDE.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/messages/: en.json  ja.json
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useBackendUrl.test.ts  useBackendUrl.ts  useBaseUrl.test.ts  useShare.ts  (+14 more)
ml/: .gitignore  pyproject.toml
ml/configs/: __init__.py  model.py  training.py
ml/core/: cross_validation.py  lit_dataset.py
ml/scripts/: evaluate_lit_cv.py  forecast_lit.py  train_lit_cv.py  visualize_lit_cv.py
qrcode/: CLAUDE.md  eslint.config.mjs  package.json  pnpm-lock.yaml
qrcode/src/: index.test.ts  index.ts  qrCodeGenerator.test.ts  qrCodeGenerator.ts
scripts/: CLAUDE.md  build_backend.sh  deploy.sh  export_requirements.sh
terraform/: CLAUDE.md  README.md  provider.env
(+137 files in other folders)
