[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=4.0.1",
    "aws-advanced-python-wrapper>=1.2.0",
    "fastapi[standard]>=0.116.0",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "mysql-connector-python>=9.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]

[tool.mypy]
strict = true
exclude = [".venv", "alembic"]

[[tool.mypy.overrides]]
module = "aws_advanced_python_wrapper"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.core.infrastructure.sqlalchemy.models.*"
disallow_untyped_calls = false

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle Warning
]
ignore = [
    "E501",  # line-too-long
]
