[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosmtplib>=4.0.1",
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.0",
    "google-api-python-client>=2.182.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]

[tool.mypy]
strict = true
exclude = [".venv", "alembic"]

[[tool.mypy.overrides]]
module = "aiomysql"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.core.infrastructure.sqlalchemy.models.*"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "app.core.infrastructure.google.*"
disallow_untyped_calls = false

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle Warning
]
ignore = [
    "E501",  # line-too-long
]
