[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "multimodal-timesfm>=0.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

[tool.mypy]
strict = true
exclude = [".venv"]

[tool.ruff]
target-version = "py311"

line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle Error
    "W",  # pycodestyle Warning
    "F",  # Pyflakes
]
ignore = [
    "E501",  # line-too-long
]
